fixed screen overflow bug

--- a/src/Card/cardProject.css
+++ b/src/Card/cardProject.css
@@ -50,4 +50,5 @@
     font-size: 4vmin;
     font-family: 'Urbanist', sans-serif;
     margin: 10px;
+    font-weight: bold;
 }
