--- a/src/components/None/NoneExperience.css
+++ b/src/components/None/NoneExperience.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 .NoneExperienceHeading{
     font-size: 10vmin;
